modified th 404 page

--- a/404.html
+++ b/404.html
@@ -1,15 +1,20 @@
+--- 
+layout: default 
+title: "404: Page not found" 
+permalink: 404.html 
 ---
-layout: default
-title: "404: Page not found"
-permalink: 404.html
----
 
-<div class="page">
-  <h1 class="page-title">404: Page not found</h1>
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/SIaFtAKnqBU?autoplay=1&start=3" frameborder="0" allowfullscreen></iframe>
-
-  <h1>Ahhhhh!</h1>
-
-  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again, or search for it on the <a href="{{ site.baseurl }}/menu/writing.html">archives page</a>.</p>
-</div>
+<table align="center" cellpadding="0" cellspacing="0">
+    <tbody>
+        <tr>
+            <tr>
+                <td><img src="{{ site.github.url}}/images/404.jpg" alt="" height="328" width="795"></td>
+            </tr>
+            <tr>
+                <td align="center">
+                    <p style="margin-left: 6px;" ><strong><br><br><h3>您所寻找的页面不见了</h3></strong></p>
+                </td>
+            </tr>
+    </tbody>
+</table>
